fixed scrollbar for results area, and various height calcs

--- a/ProductWebScalaReact/server/src/main/assets/stylesheets/main.less
+++ b/ProductWebScalaReact/server/src/main/assets/stylesheets/main.less
@@ -16,6 +16,10 @@
  height:calc(~"100vh - 8.7em");
  overflow:hidden;
  }
+#resultsContainer{
+ height:calc(~"100vh - 17.5em");
+ overflow:auto;
+}
 
  @media(max-width:1300px){
  #mainContainer{
